fix viewGroup last card overlap with quizzsetup

--- a/src/styles/components/viewGroup/_viewGroup.scss
+++ b/src/styles/components/viewGroup/_viewGroup.scss
@@ -7,6 +7,7 @@
   padding-bottom: 5rem;
   display: flex;
   flex-direction: column;
+  transition: all .5s ease-in-out;
 
   &__title{
     position: absolute;
